Staff Dept & ACD alignment issue fix

--- a/src/out_patients/modules/staff-dept/staff-dept.component.scss
+++ b/src/out_patients/modules/staff-dept/staff-dept.component.scss
@@ -2,3 +2,62 @@
     color: #004084;
     font:Proxima Nova;
 }
+.bg-lightgray{
+    background :#F6F6F6; 
+     
+}
+.bg-darkgray{
+    
+    background: #d8d8d8;
+}
+
+.bg-white{
+    background-color:white;
+}
+
+//REMOVE PADDING FOR INPUT CONTROLS
+// ::ng-deep .input .mat-form-field-wrapper{
+
+//     padding-bottom: 0 !important;
+
+// }
+
+.input-padding{
+    ::ng-deep .mat-form-field-appearance-outline .mat-form-field-wrapper{
+        padding-bottom: 0rem !important;  
+    }
+}
+
+.text-wrap{
+    white-space:nowrap;
+}
+
+.w-12{
+    width:12%;
+}
+.w-8{
+    width:9%
+}
+.color-blue{
+    color:#45C0BE;
+}
+
+//DISPLAY TABLE HEADERS IN A SINGLE LINE
+::ng-deep .whitespace-nowrap .mat-sort-header-content{
+    white-space:nowrap;
+}
+
+.iom-message{
+    position:absolute;
+    margin-left: 58%;
+    top: 25%;
+    color:red;
+
+}
+.disableiomclass{
+color: currentColor;
+cursor: not-allowed;
+pointer-events: none;
+opacity: 0.5;
+//text-decoration: none;
+}
